fix logo on mobile

--- a/styles/GlobalSearch.module.css
+++ b/styles/GlobalSearch.module.css
@@ -17,3 +17,10 @@
   color: #656565;
   border: none;
 }
+
+@media only screen and (max-width: 560px) {
+  .form {
+    width: 80%;
+    align-self: flex-end;
+  }
+}
